--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ a,
 }
 
 .map-container {
-  flex: 3;
+  flex: 1.8;
   margin: 0.625rem 0;
 }
 
@@ -72,65 +72,66 @@ a,
   overflow-y: hidden;
   width: 100%;
   height: 100%;
-}
-
-.as-artwork-list>div {
-  flex: 1;
-  min-width: 8.25rem;
-  margin-right: 0.625rem;
-  background-color: #ddd;
-  padding: 0.625rem;
-  border-radius: 1rem;
-  text-align: center;
+  gap: 0.75rem;
+  /* 12px to rem */
 }
 
 .as-artwork-card {
-  width: 320px;
-  border-radius: 12px;
+  width: 20rem;
+  height: 100%;
+  position: relative;
   overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  background: white;
-  transition: transform 0.3s ease;
-}
-
-.as-artwork-card:hover {
-  transform: scale(1.05);
+  flex: 1;
+  min-width: 12rem;
+  border-radius: 0.5rem;
 }
 
 .as-artwork-card img {
   width: 100%;
-  height: 200px;
+  height: 100%;
   object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .as-artwork-card-content {
-  padding: 16px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
 }
 
-.as-artwork-card h3 {
-  font-size: 18px;
-  margin-bottom: 8px;
-  color: #333;
-}
-
-.as-artwork-card p {
-  font-size: 14px;
-  color: #777;
-}
-
-.as-artwork-gallery {
+.as-artwork-card h4 {
+  font-size: 1.2rem;
   font-weight: bold;
-  color: #0056b3;
-  margin-top: 6px;
+  margin-bottom: 0.25rem;
+  /* 4px to rem */
 }
 
+.as-artwork-card-artist {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.as-artwork-card-gallery {
+  font-size: 0.9rem;
+  opacity: 0.8;
+  margin-top: 0.2rem;
+}
 
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  background-color: #fff;
   padding: 0.5rem 0;
 }
 
