--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,17 @@ a,
   display: flex;
   flex-direction: column;
   height: 100%;
+  position: relative;
+}
+
+.search-container {
+  width: 100%;
+  height: 100%;
+  margin: 0.25rem 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
 }
 
 .as-map {
@@ -66,17 +77,18 @@ a,
   overflow: hidden;
 }
 
-.as-artwork-list {
+.as-artwork-list,
+.as-artist-list {
   display: flex;
   overflow-x: auto;
   overflow-y: hidden;
   width: 100%;
   height: 100%;
   gap: 0.75rem;
-  /* 12px to rem */
 }
 
-.as-artwork-card {
+.as-artwork-card,
+.as-artist-card {
   width: 20rem;
   height: 100%;
   position: relative;
@@ -86,7 +98,13 @@ a,
   border-radius: 0.5rem;
 }
 
-.as-artwork-card img {
+/* .as-artist-card {
+  width: 20rem;
+  height: 60%;
+} */
+
+.as-artwork-card img,
+.as-artist-card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -95,7 +113,8 @@ a,
   left: 0;
 }
 
-.as-artwork-card-content {
+.as-artwork-card-content,
+.as-artist-card-content {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -109,11 +128,12 @@ a,
   align-items: flex-start;
 }
 
-.as-artwork-card h4 {
-  font-size: 1.2rem;
+.as-artwork-card h4,
+.as-artist-card h4 {
+  font-size: 1.1rem;
   font-weight: bold;
   margin-bottom: 0.25rem;
-  line-height: 1.3rem;
+  line-height: 1.4rem;
 }
 
 .as-artwork-card-artist {
@@ -121,7 +141,8 @@ a,
   font-weight: 500;
 }
 
-.as-artwork-card-gallery {
+.as-artwork-card-gallery,
+.as-artist-card-nationality {
   font-size: 0.9rem;
   opacity: 0.8;
   margin-top: 0.2rem;
@@ -143,4 +164,73 @@ nav a {
 
 nav a:hover {
   color: #007bff;
+}
+
+.as-search-input {
+  width: 100%;
+  padding: 0.625rem;
+  border: none;
+  border-bottom: 0.0625rem solid var(--lightest-blue);
+  border-radius: 0.5rem;
+  outline: none;
+  font-size: 1.2rem;
+  color: var(--dark-grey);
+  background: var(--off-white);
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  margin-bottom: 0.75rem;
+}
+
+.loading-message {
+  font-size: 1rem;
+  color: #333;
+}
+
+.loading-component {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  animation: rotate 1s linear infinite;
+}
+
+.spinner-circle {
+  stroke: var(--dark-blue);
+  stroke-dasharray: 150, 200;
+  stroke-dashoffset: 0;
+  stroke-linecap: round;
+  animation: dash 1.5s ease-in-out infinite;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+
+  50% {
+    stroke-dasharray: 100, 200;
+    stroke-dashoffset: -15px;
+  }
+
+  100% {
+    stroke-dasharray: 150, 200;
+    stroke-dashoffset: -125px;
+  }
 }
