--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --white: #fff;
   --dark-grey: #333;
   --medium--grey: #666;
+  /* font-family: "Inter", sans-serif !important; */
 }
 
 html {
@@ -22,6 +23,12 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+
+/* option,
+select,
+input {
+  font-family: "Inter", sans-serif;
+} */
 
 #root {
   padding: .5rem 1rem;
@@ -87,18 +94,23 @@ a,
   gap: 0.75rem;
 }
 
+/* center if only 1 result */
+.as-artist-list:has(.as-artist-card:only-child) {
+  justify-content: center;
+}
+
 .as-artwork-card,
 .as-artist-card {
-  width: 20rem;
   height: 100%;
   position: relative;
   overflow: hidden;
   flex: 1;
-  min-width: 12rem;
   border-radius: 0.5rem;
+  max-width: 14rem;
+  min-width: 12rem;
 }
 
-/* .as-artist-card {
+/* .search-container .as-artist-card {
   width: 20rem;
   height: 60%;
 } */
@@ -108,9 +120,11 @@ a,
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .as-artwork-card-content,
@@ -164,6 +178,24 @@ nav a {
 
 nav a:hover {
   color: #007bff;
+}
+
+.as-select-radius {
+  /* font-family: 'Inter', sans-serif; */
+  width: 12rem;
+  padding: 0.625rem;
+  border: none;
+  border-bottom: 0.0625rem solid var(--lightest-blue);
+  border-radius: 0.5rem;
+  outline: none;
+  font-size: 1.2rem;
+  color: var(--dark-grey);
+  background: var(--off-white);
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 10;
+  margin-bottom: 0.75rem;
 }
 
 .as-search-input {
