--- a/src/App.css
+++ b/src/App.css
@@ -51,18 +51,17 @@ a,
 }
 
 .top-container {
-  flex: 1.8;
+  height: 60vh;
   margin: 0.625rem 0;
 }
 
 .bottom-container {
-  flex: 1;
   overflow-x: auto;
   padding: 0.625rem 0;
   margin: 0.625rem 0;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 40vh;
   position: relative;
 }
 
@@ -94,11 +93,6 @@ a,
   gap: 0.75rem;
 }
 
-/* center if only 1 result */
-.as-artist-list:has(.as-artist-card:only-child) {
-  justify-content: center;
-}
-
 .as-artwork-card,
 .as-artist-card {
   height: 100%;
@@ -110,10 +104,25 @@ a,
   min-width: 12rem;
 }
 
-/* .search-container .as-artist-card {
-  width: 20rem;
-  height: 60%;
-} */
+.as-artwork-detail {
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
+}
+
+.artwork-screen .as-artwork-detail img {
+  width: 100%;
+  height: auto;
+  max-height: 50dvh;
+  object-fit: contain;
+}
+
+.artwork-screen .as-artwork-detail h4 {
+  margin-top: 1rem;
+}
 
 .as-artwork-card img,
 .as-artist-card img {
