--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ a,
 }
 
 .top-container {
-  height: 60vh;
+  height: 65dvh;
   margin: 0.625rem 0;
 }
 
@@ -61,7 +61,7 @@ a,
   margin: 0.625rem 0;
   display: flex;
   flex-direction: column;
-  height: 40vh;
+  height: 35dvh;
   position: relative;
 }
 
@@ -110,7 +110,6 @@ a,
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 1rem;
 }
 
 .artwork-screen .as-artwork-detail img {
@@ -122,6 +121,19 @@ a,
 
 .artwork-screen .as-artwork-detail h4 {
   margin-top: 1rem;
+}
+
+.artwork-screen .bottom-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.as-gallery-detail,
+.as-artist-detail {
+  padding: 1rem;
+  background: var(--off-white);
+  border-radius: 0.5rem;
 }
 
 .as-artwork-card img,
