--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,7 @@ a,
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
+  text-wrap: auto;
 }
 
 .as-artwork-card h4,
@@ -175,6 +176,7 @@ a,
   font-weight: bold;
   margin-bottom: 0.25rem;
   line-height: 1.4rem;
+  text-wrap: auto;
 }
 
 .as-artwork-card-artist {
@@ -327,4 +329,17 @@ input {
   background: #f3f3f3;
   border-radius: 8px;
   font-size: 0.9rem;
+}
+
+.artwork-scroll-container {
+  display: flex;
+  overflow-x: auto;
+  gap: 0.5rem;
+  white-space: nowrap;
+  padding-bottom: 0.5rem;
+  height: 18rem;
+}
+
+.artwork-scroll-item {
+  flex: 0 0 auto;
 }
