--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,6 @@ a,
   width: 100%;
   height: 100%;
   border: 0.0625rem solid #ccc;
-  border-radius: 1.25rem;
   overflow: hidden;
 }
 
@@ -210,19 +209,17 @@ nav a:hover {
 }
 
 .as-select-radius {
-  /* font-family: 'Inter', sans-serif; */
   width: 12rem;
-  padding: 0.625rem;
+  padding: 0.5rem;
   border: none;
-  border-bottom: 0.0625rem solid var(--lightest-blue);
   border-radius: 0.5rem;
   outline: none;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: var(--dark-grey);
   background: var(--off-white);
   position: absolute;
   top: 1rem;
-  right: 1rem;
+  right: .5rem;
   z-index: 10;
   margin-bottom: 0.75rem;
 }
@@ -300,7 +297,6 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
 }
 
 .section {
@@ -331,15 +327,15 @@ input {
   font-size: 0.9rem;
 }
 
-.artwork-scroll-container {
+.image-scroll-container {
   display: flex;
   overflow-x: auto;
   gap: 0.5rem;
   white-space: nowrap;
   padding-bottom: 0.5rem;
-  height: 18rem;
+  height: 15.5rem;
 }
 
-.artwork-scroll-item {
+.image-scroll-item {
   flex: 0 0 auto;
 }
