--- a/src/App.css
+++ b/src/App.css
@@ -325,6 +325,7 @@ input {
   background: #f3f3f3;
   border-radius: 8px;
   font-size: 0.9rem;
+  color: var(--dark-grey);
 }
 
 .image-scroll-container {
