--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,6 @@ html {
   box-sizing: border-box;
 }
 
-/* option,
-select,
-input {
-  font-family: "Inter", sans-serif;
-} */
-
 #root {
   padding: .5rem 1rem;
 }
@@ -48,7 +42,9 @@ a,
   display: flex;
   flex-direction: column;
   height: 100%;
+  gap: .5rem;
 }
+
 
 .top-container {
   height: 65dvh;
@@ -115,7 +111,7 @@ a,
 .artist-screen .as-artist-detail img {
   width: 100%;
   height: auto;
-  max-height: 50dvh;
+  max-height: 46dvh;
   object-fit: contain;
 }
 
@@ -131,7 +127,6 @@ a,
 
 .as-gallery-detail,
 .as-artist-detail {
-  background: var(--off-white);
   border-radius: 0.5rem;
 }
 
@@ -293,12 +288,6 @@ nav a:hover {
   }
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .section {
   display: flex;
   flex-direction: column;
@@ -333,10 +322,98 @@ input {
   overflow-x: auto;
   gap: 0.5rem;
   white-space: nowrap;
-  padding-bottom: 0.5rem;
-  height: 15.5rem;
+  height: 15rem;
 }
 
 .image-scroll-item {
   flex: 0 0 auto;
+}
+
+.flip-card {
+  width: 300px;
+  height: 55dvh;
+  perspective: 1000px;
+  cursor: pointer;
+  margin: auto;
+}
+
+.flip-card-inner {
+  width: 100%;
+  height: 55dvh;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s ease-in-out;
+}
+
+.flip-card.flipped .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-front,
+.flip-back {
+  width: 100%;
+  height: 55dvh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: white;
+  padding: 12px;
+  text-align: center;
+}
+
+.flip-front {
+  z-index: 2;
+}
+
+.flip-back {
+  transform: rotateY(180deg);
+}
+
+/* Modal Overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  /* Black background with opacity */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 0.375rem;
+  max-width: 90%;
+  max-height: 90%;
+  overflow: auto;
+  border-radius: 0.5rem;
+  text-align: center;
+}
+
+.modal-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.25rem;
+}
+
+.close-btn {
+  position: absolute;
+  top: 0.625rem;
+  right: 0.625rem;
+  color: var(--dark-grey);
+  border: none;
+  font-size: 1.25rem;
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 0.3125rem 0.625rem;
 }
