--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
   --white: #fff;
   --dark-grey: #333;
   --medium--grey: #666;
-  /* font-family: "Inter", sans-serif !important; */
+  max-width: 600px;
+  margin: auto;
 }
 
 html {
@@ -45,9 +46,8 @@ a,
   gap: .5rem;
 }
 
-
 .top-container {
-  height: 65dvh;
+  height: 50dvh;
   margin: 0.625rem 0;
 }
 
@@ -57,7 +57,7 @@ a,
   margin: 0.625rem 0;
   display: flex;
   flex-direction: column;
-  height: 35dvh;
+  height: 50dvh;
   position: relative;
 }
 
@@ -69,7 +69,16 @@ a,
   flex-direction: column;
   height: 100%;
   position: relative;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  /* Firefox */
 }
+
+.search-container::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari */
+}
+
 
 .as-map {
   width: 100%;
@@ -111,7 +120,7 @@ a,
 .artist-screen .as-artist-detail img {
   width: 100%;
   height: auto;
-  max-height: 46dvh;
+  max-height: 40dvh;
   object-fit: contain;
 }
 
@@ -209,7 +218,7 @@ nav a:hover {
   border: none;
   border-radius: 0.5rem;
   outline: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: var(--dark-grey);
   background: var(--off-white);
   position: absolute;
@@ -322,7 +331,7 @@ input {
   overflow-x: auto;
   gap: 0.5rem;
   white-space: nowrap;
-  height: 15rem;
+  height: 12rem;
 }
 
 .image-scroll-item {
@@ -331,7 +340,7 @@ input {
 
 .flip-card {
   width: 300px;
-  height: 55dvh;
+  height: 50dvh;
   perspective: 1000px;
   cursor: pointer;
   margin: auto;
@@ -339,7 +348,7 @@ input {
 
 .flip-card-inner {
   width: 100%;
-  height: 55dvh;
+  height: 50dvh;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s ease-in-out;
@@ -352,7 +361,7 @@ input {
 .flip-front,
 .flip-back {
   width: 100%;
-  height: 55dvh;
+  height: 50dvh;
   position: absolute;
   top: 0;
   left: 0;
@@ -413,6 +422,11 @@ input {
   overflow: auto;
   border-radius: 0.5rem;
   text-align: center;
+
+  p {
+    margin: 0.25rem 0;
+  }
+
 }
 
 .modal-image {
